--- a/firebase.json
+++ b/firebase.json
@@ -6,7 +6,9 @@
   },
   "functions": {
     "predeploy": [
-      "cd \"$RESOURCE_DIR\" && npm install && npx eslint --config ./.eslintrc.js ."
+      "npm --prefix \"$RESOURCE_DIR\" install",
+      "npm --prefix \"$RESOURCE_DIR\" run lint",
+      "npm --prefix \"$RESOURCE_DIR\" run build"
     ],
     "source": "functions"
   },
@@ -23,22 +25,5 @@
         "destination": "/index.html"
       }
     ]
-  },
-  "emulators": {
-    "auth": {
-      "port": 9099
-    },
-    "functions": {
-      "port": 5001
-    },
-    "firestore": {
-      "port": 8080
-    },
-    "hosting": {
-      "port": 5000
-    },
-    "ui": {
-      "enabled": true
-    }
   }
 }
