--- a/.gitignore
+++ b/.gitignore
@@ -1,41 +1,18 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
+# Dependencies
 /node_modules
-/.pnp
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
+/functions/node_modules
 
-# testing
-/coverage
+# Build output
+.next/
+out/
 
-# next.js
-/.next/
-/out/
+# Firebase
+.firebase/
+database-debug.log
+firestore-debug.log
+storage-debug.log
+firebase-debug.log
 
-# production
-/build
-
-# misc
-.DS_Store
-*.pem
-
-# debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-.pnpm-debug.log*
-
-# env files (can opt-in for committing if needed)
-.env*
-
-# vercel
-.vercel
-
-# typescript
-*.tsbuildinfo
-next-env.d.ts
+# Local environment
+.env.local
+*.log
