--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,28 @@
+
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
 # Dependencies
 /node_modules
 /functions/node_modules
 
-# Build output
+# Build artifacts
 .next/
 out/
+build/
+.tsbuildinfo
+
+# Local environment variables
+.env*.local
 
 # Firebase
 .firebase/
-database-debug.log
-firestore-debug.log
-storage-debug.log
 firebase-debug.log
+database-debug.log
 
-# Local environment
-.env.local
-*.log
+# IDE / System files
+.vscode/
+.DS_Store
+*.pem
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
